--- a/bookmarks.html
+++ b/bookmarks.html
@@ -91,6 +91,48 @@
         <li class="navigation__list-item">
           <a
             class="navigation__link"
+            href="/form.html"
+            aria-label="add new quiz card"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 0 24 24"
+              width="24px"
+              fill="currentColor"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              />
+              <line
+                x1="12"
+                y1="8"
+                x2="12"
+                y2="16"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="8"
+                y1="12"
+                x2="16"
+                y2="12"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+            </svg>
+          </a>
+        </li>
+        <li class="navigation__list-item">
+          <a
+            class="navigation__link"
             href="/profile.html"
             aria-label="go to profile page"
           >
